# haskell-supervisors

./: .gitignore  CHANGELOG.md  README.md  Supervisors.hs  supervisors.cabal
src/: Supervisors.hs
