cabal-version:       2.2
name:                supervisors
version:             0.1.0.0
synopsis:            TODO
-- description:
homepage:            https://github.com/zenhack/haskell-supervisors
license:             MIT
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2018 Ian Denhardt
category:            Concurrency
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Supervisors
  build-depends:
      base ^>=4.12
    , stm ^>=2.5
    , containers ^>=0.6
    , unliftio ^>=0.2.8
    , async ^>=2.2.1
  default-language:    Haskell2010
